--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,10 @@ ul {
 ul li a {
   text-decoration: none;
 }
+.container a {
+  text-decoration: none;
+  list-style: none;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -121,6 +125,28 @@ img {
 }
 
 /*=======================Layout=====================*/
+/* move icon */
+.moveIcon {
+  border-radius: 50px;
+  box-sizing: border-box;
+  position: relative;
+  animation: mymove 8s linear infinite;
+}
+.moveIcon img {
+  width: 100px;
+}
+
+@keyframes mymove {
+  from {
+    left: 0px;
+    top: 300px;
+  }
+  to {
+    left: 80vw;
+    top: 100px;
+  }
+}
+/*move icon close */
 .container {
   max-width: 768px;
   margin-left: var(--mb-1-5);
@@ -167,6 +193,12 @@ img {
   color: var(--first-color);
 }
 @media screen and (max-width: 767px) {
+  .moveIcon {
+    animation: null;
+  }
+  .moveIcon img {
+    display: none;
+  }
   .nav__menu {
     position: fixed;
     bottom: -100%;
@@ -187,7 +219,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: var(--small-font-size);
+  font-size: var(--font-medium);
   color: var(--title-color);
   font-weight: var(--font-medium);
 }
@@ -238,7 +270,6 @@ img {
 .home__blob {
   background-color: var(--first-color);
   border-radius: 50%;
-
 }
 .home__blob-img {
   width: 250px;
@@ -300,7 +331,7 @@ canvas {
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
-  padding: 0.75rem;
+  padding: 0.32rem 0.75rem;
   border-radius: 0.5rem;
   font-weight: var(--font-medium);
 }
@@ -443,11 +474,11 @@ canvas {
 .skills__react {
   width: 85%;
 }
-.skills__bootstrap{
+.skills__bootstrap {
   width: 90%;
 }
-.skills__tailwindcss{
-  width:80%
+.skills__tailwindcss {
+  width: 80%;
 }
 .skills__figma {
   width: 90%;
@@ -470,8 +501,8 @@ canvas {
 .skills__pyton {
   width: 55%;
 }
-.skills__awsservices{
-  width:80%
+.skills__awsservices {
+  width: 80%;
 }
 
 .skills__close .skills__list {
@@ -550,7 +581,7 @@ canvas {
   display: block;
 }
 
-.qualification__button.qualification__active {
+.qualification__button .qualification__active {
   color: var(--first-color); /* color is not working  */
 }
 
